# mcp-python-sdk

./: .gitignore  AGENT.md
.cursor/: mcp.json
examples/servers/image-mcp/: README.md  example_client.py  fs.md  prd.md  pyproject.toml
examples/servers/image-mcp/mcp_image_ocr/: __init__.py  __main__.py  factories.py  implementations.py  interfaces.py  resource_manager.py  server.py
examples/servers/simple-confluence/: README.md  pyproject.toml
examples/servers/simple-confluence/mcp_simple_confluence/: server.py
