[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-image-ocr"
version = "0.1.0"
authors = [
    {name = "MCP Image OCR Server Contributors", email = "example@example.com"},
]
description = "MCP server for image text extraction"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["mcp", "ocr", "image-processing", "text-extraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mcp>=0.1.0",
    "httpx>=0.24.0",
    "anyio>=3.6.2",
    "click>=8.1.3",
    "pillow>=9.0.0",
    "pytesseract>=0.3.10",
]

[project.optional-dependencies]
sse = [
    "starlette>=0.27.0",
    "uvicorn>=0.22.0",
]
dev = [
    "black>=22.3.0",
    "isort>=5.10.1",
    "mypy>=0.942",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.3",
]

[project.scripts]
mcp-image-ocr = "mcp_image_ocr.server:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["httpx.*", "anyio.*", "click.*", "pytesseract.*"]
ignore_missing_imports = true 